deploy/examples/revision-based-upgrade/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: enable-global-mtls
spec:
  mtls:
    mode: STRICT
