deploy/examples/revision-based-upgrade/istio-ingressgateway-1-20-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-1-20
  labels:
    istio: ingressgateway
spec:
  type: ClusterIP
  selector:
    app: istio-ingressgateway-1-20
  ports:
  - name: http
    port: 8080
