deploy/examples/revision-based-upgrade/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: istio-ingressgateway
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  host: bookinfo.apps-crc.testing
  to:
    kind: Service
    name: istio-ingressgateway
  port:
    targetPort: 8080
